# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  15 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    iproute2 now understands the old iface_xxx syntax, but this only works
    if ifconfig (from net-tools) is installed

  14 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    fallback_route_eth0 now works again

    Implemented interactive startup - fixes #5353
    Thanks to Paul Pacheco for the patch

  13 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Parallel startup races should now be fixed

    iwconfig now scans for mode so you can prefer ad-hoc networks

  12 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    RC_AUTO_INTERFACE now defaults to no - we no longer mess with /etc unless
    told too

    tuntap no longer complains about ${devnull}

    We now merge resolv.conf and ntp.conf from active interfaces

  11 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Add support for --pid ${pidfile} and --pidfile=${pidfile} in rc-daemon.sh

    Remove tail from depdir() in /sbin/modules-update

* baselayout-1.12.0_pre5 (11 Aug 2005)

  08 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Add failup/faildown user functions when an interface fails to come up/go
    down. Fixes bug #101087.

  06 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:

    Revert 'mtime' changes to depscan.sh, and just make it warn if it detects
    that there are files with mtime in the future.

  06 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:

    Enhance gendepends.awk to check more than one level of dependencies.  Also
    break checking of NEED/USE/BEFORE/AFTER into more stages, so that we can
    but sure that all NEED's will override the rest, that USE will override
    BEFORE/AFTER, and also check both the resolved and unresolved trees.

    Also test if RUNLEVEL is '1' besides 'S', fixing 'init 1'.

    Hack init.d/clock to wait for /dev/rtc if compiled as a module ... hopefully